5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4067/executions/1706_3051.log
== SUBMITION (2019-04-29 18:23:57) 
-- CODE:
a = float(input("consumo: "))
if a > 0:
	if a == 0,150:
		print(round((0,150*0.60)+ 5.00,2))
	elif a == 250:
		print(round(250 * 0,65 + 8.00,2))
	elif a == 350:
		print(round(350*0.70 + 12.00,2))
	elif a > 350:
		print(round(350*0.75+16.00,2))
else:
	print()
		
		
-- EXECUTION TIME:
0.260587
-- ERROR:
  File "/home/codebench/codes/1706/3051/main.py", line 3
    if a == 0,150:
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:24:00) 
-- CODE:
a = float(input("consumo: "))
if a > 0:
	if a == 0,150:
		print(round((0,150*0.60)+ 5.00,2))
	elif a == 250:
		print(round(250 * 0,65 + 8.00,2))
	elif a == 350:
		print(round(350*0.70 + 12.00,2))
	elif a > 350:
		print(round(350*0.75+16.00,2))
else:
	print()
		
		
-- ERROR:
File "XXXX", line 3
    if a == 0,150:
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:24:25) 
-- CODE:
a = float(input("consumo: "))
if a > 0:
	if a == 0.150:
		print(round((0.150*0.60)+ 5.00,2))
	elif a == 250:
		print(round(250 * 0.65 + 8.00,2))
	elif a == 350:
		print(round(350*0.70 + 12.00,2))
	elif a > 350:
		print(round(350*0.75+16.00,2))
else:
	print()
		
		
-- ERROR:
File "XXXX", line 3
    if a == 0,150:
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:24:42) 
-- CODE:
a = float(input("consumo: "))
if a > 0:
	if a == 0.150:
		print(round((0.150*0.60)+ 5.00,2))
	elif a == 250:
		print(round(250 * 0.65 + 8.00,2))
	elif a == 350:
		print(round(350*0.70 + 12.00,2))
	elif a > 350:
		print(round(350*0.75+16.00,2))
		
		
-- ERROR:
File "XXXX", line 3
    if a == 0,150:
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:27:17) 
-- CODE:
a = float(input("consumo: "))
if a > 0:
	if a == 0.150:
		print(round("valor: ",(0.150*0.60)+ 5.00,2))
	elif a == 250:
		print(round("valor: ",250 * 0.65 + 8.00,2))
	elif a == 350:
		print(round("valor: ",350*0.70 + 12.00,2))
	elif a > 350:
		print(round("valor: ",350*0.75+16.00,2))
	else:
		print()
else:
	print()
		
		
-- ERROR:
File "XXXX", line 3
    if a == 0,150:
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:27:54) 
-- CODE:
a = float(input("consumo: "))
if a > 0:
	if a == 0.150:
		print(round("valor: ",(0.150*0.60)+ 5.00,2))
	elif a == 250:
		print(round("valor: ",250 * 0.65 + 8.00,2))
	elif a == 350:
		print(round("valor: ",350*0.70 + 12.00,2))
	elif a > 350:
		print(round("valor: ",350*0.75+16.00,2))
	else:
		print()
else:
	print()
		
		
-- ERROR:
File "XXXX", line 3
    if a == 0,150:
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:28:06) 
-- CODE:
a = float(input("consumo: "))
if a > 0:
	if a == 0.150:
		print(round("valor: ",(0.150*0.60)+ 5.00,2))
	elif a == 250:
		print(round("valor: ",250 * 0.65 + 8.00,2))
	elif a == 350:
		print(round("valor: ",350*0.70 + 12.00,2))
	elif a > 350:
		print(round("valor: ",350*0.75+16.00,2))
	else:
		print()
else:
	print()
		
		
-- EXECUTION TIME:
0.204084
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:

-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:

-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:30:00) 
-- CODE:
a = float(input("consumo: "))
if a == 150:
	valor = 150*0.60+5.00
	print(valor)
		
-- EXECUTION TIME:
0.159549
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:

-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:

-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:30:01) 
-- CODE:
a = float(input("consumo: "))
if a == 150:
	valor = 150*0.60+5.00
	print(valor)
		
-- ERROR:
File "XXXX", line 3
    if a == 0,150:
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:37:41) 
-- CODE:
a = float(input("consumo: "))
if a > 0 and a <= 150:
	valor = 150*0.60+5.00
	print(valor)
	if a > 150 and a <= 250:
		valor = 250*0.65+8.00
		print(round(valor,2))
	elif a > 250 and a <=350:
		valor = 350*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = 350*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- OUTPUT:
95.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:37:48) 
-- CODE:
a = float(input("consumo: "))
if a > 0 and a <= 150:
	valor = 150*0.60+5.00
	print(valor)
	if a > 150 and a <= 250:
		valor = 250*0.65+8.00
		print(round(valor,2))
	elif a > 250 and a <=350:
		valor = 350*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = 350*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- OUTPUT:
95.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:37:49) 
-- CODE:
a = float(input("consumo: "))
if a > 0 and a <= 150:
	valor = 150*0.60+5.00
	print(valor)
	if a > 150 and a <= 250:
		valor = 250*0.65+8.00
		print(round(valor,2))
	elif a > 250 and a <=350:
		valor = 350*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = 350*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- EXECUTION TIME:
0.14803
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:
95.0
-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:

-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:37:50) 
-- CODE:
a = float(input("consumo: "))
if a > 0 and a <= 150:
	valor = 150*0.60+5.00
	print(valor)
	if a > 150 and a <= 250:
		valor = 250*0.65+8.00
		print(round(valor,2))
	elif a > 250 and a <=350:
		valor = 350*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = 350*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- EXECUTION TIME:
0.131853
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:
95.0
-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:

-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:37:52) 
-- CODE:
a = float(input("consumo: "))
if a > 0 and a <= 150:
	valor = 150*0.60+5.00
	print(valor)
	if a > 150 and a <= 250:
		valor = 250*0.65+8.00
		print(round(valor,2))
	elif a > 250 and a <=350:
		valor = 350*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = 350*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- EXECUTION TIME:
0.17713
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:
95.0
-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:
95.0
-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:37:52) 
-- CODE:
a = float(input("consumo: "))
if a > 0 and a <= 150:
	valor = 150*0.60+5.00
	print(valor)
	if a > 150 and a <= 250:
		valor = 250*0.65+8.00
		print(round(valor,2))
	elif a > 250 and a <=350:
		valor = 350*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = 350*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- EXECUTION TIME:
0.187917
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:

-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:
95.0
-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:37:52) 
-- CODE:
a = float(input("consumo: "))
if a > 0 and a <= 150:
	valor = 150*0.60+5.00
	print(valor)
	if a > 150 and a <= 250:
		valor = 250*0.65+8.00
		print(round(valor,2))
	elif a > 250 and a <=350:
		valor = 350*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = 350*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- EXECUTION TIME:
0.215374
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:

-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:

-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:37:52) 
-- CODE:
a = float(input("consumo: "))
if a > 0 and a <= 150:
	valor = 150*0.60+5.00
	print(valor)
	if a > 150 and a <= 250:
		valor = 250*0.65+8.00
		print(round(valor,2))
	elif a > 250 and a <=350:
		valor = 350*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = 350*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- EXECUTION TIME:
0.378624
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:

-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:

-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:37:59) 
-- CODE:
a = float(input("consumo: "))
if a > 0 and a <= 150:
	valor = 150*0.60+5.00
	print(valor)
	if a > 150 and a <= 250:
		valor = 250*0.65+8.00
		print(round(valor,2))
	elif a > 250 and a <=350:
		valor = 350*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = 350*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- OUTPUT:
95.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:38:35) 
-- CODE:
a = float(input("consumo: "))
if a > 0 and a <= 150:
	valor = 150*0.60+5.00
	print(valor)
	if a > 150 and a <= 250:
		valor = 250*0.65+8.00
		print(round(valor,2))
	elif a > 250 and a <=350:
		valor = 350*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = 350*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- OUTPUT:
95.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:38:42) 
-- CODE:
a = float(input("consumo: "))
if a > 0 and a <= 150:
	valor = 150*0.60+5.00
	print(valor)
	if a > 150 and a <= 250:
		valor = 250*0.65+8.00
		print(round(valor,2))
	elif a > 250 and a <=350:
		valor = 350*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = 350*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- OUTPUT:
95.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:38:43) 
-- CODE:
a = float(input("consumo: "))
if a > 0 and a <= 150:
	valor = 150*0.60+5.00
	print(valor)
	if a > 150 and a <= 250:
		valor = 250*0.65+8.00
		print(round(valor,2))
	elif a > 250 and a <=350:
		valor = 350*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = 350*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- EXECUTION TIME:
0.137698
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:
95.0
-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:

-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:38:43) 
-- CODE:
a = float(input("consumo: "))
if a > 0 and a <= 150:
	valor = 150*0.60+5.00
	print(valor)
	if a > 150 and a <= 250:
		valor = 250*0.65+8.00
		print(round(valor,2))
	elif a > 250 and a <=350:
		valor = 350*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = 350*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- EXECUTION TIME:
0.102093
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1706/3051/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:38:44) 
-- CODE:
a = float(input("consumo: "))
if a > 0 and a <= 150:
	valor = 150*0.60+5.00
	print(valor)
	if a > 150 and a <= 250:
		valor = 250*0.65+8.00
		print(round(valor,2))
	elif a > 250 and a <=350:
		valor = 350*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = 350*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- EXECUTION TIME:
0.19877
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:
95.0
-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:

-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:40:14) 
-- CODE:
a = float(input("consumo: "))
if a > 0 and a <= 150:
	valor = a*0.60+5.00
	print(valor)
	if a > 150 and a <= 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 and a <=350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- OUTPUT:
84.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:40:19) 
-- CODE:
a = float(input("consumo: "))
if a > 0 and a <= 150:
	valor = a*0.60+5.00
	print(valor)
	if a > 150 and a <= 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 and a <=350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- OUTPUT:
84.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:40:26) 
-- CODE:
a = float(input("consumo: "))
if a > 0 and a <= 150:
	valor = a*0.60+5.00
	print(valor)
	if a > 150 and a <= 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 and a <=350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- OUTPUT:
84.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:41:04) 
-- CODE:
a = float(input("consumo: "))
if a > 0 and a <= 150:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a > 150 and a <= 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 and a <=350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- OUTPUT:
84.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:41:10) 
-- CODE:
a = float(input("consumo: "))
if a > 0 and a <= 150:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a > 150 and a <= 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 and a <=350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- OUTPUT:
84.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:41:11) 
-- CODE:
a = float(input("consumo: "))
if a > 0 and a <= 150:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a > 150 and a <= 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 and a <=350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- EXECUTION TIME:
0.160633
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:
84.2
-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:

-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:41:12) 
-- CODE:
a = float(input("consumo: "))
if a > 0 and a <= 150:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a > 150 and a <= 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 and a <=350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- EXECUTION TIME:
0.154422
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:
84.2
-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:
84.2
-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:
84.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:41:12) 
-- CODE:
a = float(input("consumo: "))
if a > 0 and a <= 150:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a > 150 and a <= 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 and a <=350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- EXECUTION TIME:
0.128777
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:
84.2
-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:
84.2
-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:
84.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:41:13) 
-- CODE:
a = float(input("consumo: "))
if a > 0 and a <= 150:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a > 150 and a <= 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 and a <=350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- EXECUTION TIME:
0.329236
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:
84.2
-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:

-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:41:13) 
-- CODE:
a = float(input("consumo: "))
if a > 0 and a <= 150:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a > 150 and a <= 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 and a <=350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- EXECUTION TIME:
0.266112
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:
84.2
-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:

-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:41:13) 
-- CODE:
a = float(input("consumo: "))
if a > 0 and a <= 150:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a > 150 and a <= 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 and a <=350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- EXECUTION TIME:
0.343078
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1706/3051/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:41:16) 
-- CODE:
a = float(input("consumo: "))
if a > 0 and a <= 150:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a > 150 and a <= 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 and a <=350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- OUTPUT:
84.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:41:28) 
-- CODE:
a = float(input("consumo: "))
if a > 0 and a <= 150:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a > 150 and a <= 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 and a <=350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- OUTPUT:
84.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:42:17) 
-- CODE:
a = float(input("consumo: "))
if a > 0 and a <= 150:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a > 150 and a <= 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 and a <=350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- EXECUTION TIME:
0.15088
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:
84.2
-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:

-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:42:18) 
-- CODE:
a = float(input("consumo: "))
if a > 0 and a <= 150:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a > 150 and a <= 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 and a <=350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- OUTPUT:
84.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:43:39) 
-- CODE:
a = float(input("consumo: "))
if a >= 0 or a <= 150:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a >= 150 or a <= 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a >= 250 or a <=350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a >= 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- OUTPUT:
84.2
93.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:44:25) 
-- CODE:
a = float(input("consumo: "))
if a >= 0 or a == 150:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a >= 150 or a == 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a >= 250 or a ==350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a >= 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- OUTPUT:
84.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:44:38) 
-- CODE:
a = float(input("consumo: "))
if a >= 0 or a == 150:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a >= 150 or a == 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a >= 250 or a ==350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a >= 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- EXECUTION TIME:
0.164867
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:
84.2
-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:
516.2
561.8
-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:
6004.4
6507.35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:44:38) 
-- CODE:
a = float(input("consumo: "))
if a >= 0 or a == 150:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a >= 150 or a == 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a >= 250 or a ==350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a >= 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- EXECUTION TIME:
0.116068
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1706/3051/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:45:23) 
-- CODE:
a = float(input("consumo: "))
if a >= 0 or a == 150:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a >= 150 or a == 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a >= 250 or a ==350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a >= 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- OUTPUT:
84.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:45:40) 
-- CODE:
a = float(input("consumo: "))
if a >= 0 or a == 150:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a >= 150 or a == 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a >= 250 or a ==350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a >= 350:
		valor = a*0.75+16.00
		print(round(valor,2))
		
-- OUTPUT:
84.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:46:37) 
-- CODE:
a = float(input("consumo: "))
if a >= 0 or a == 150:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a >= 150 or a == 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 or a ==350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- OUTPUT:
84.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:47:06) 
-- CODE:
a = float(input("consumo: "))
if a >= 0 or a == 150:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a > 150 or a == 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 or a ==350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- OUTPUT:
84.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:47:13) 
-- CODE:
a = float(input("consumo: "))
if a >= 0 or a == 150:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a > 150 or a == 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 or a ==350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- EXECUTION TIME:
0.127762
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:
84.2
-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:
516.2
561.8
-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:
6004.4
6507.35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:47:14) 
-- CODE:
a = float(input("consumo: "))
if a >= 0 or a == 150:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a > 150 or a == 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 or a ==350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- EXECUTION TIME:
0.168397
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:
84.2
-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:
516.2
561.8
-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:
6004.4
6507.35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:47:15) 
-- CODE:
a = float(input("consumo: "))
if a >= 0 or a == 150:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a > 150 or a == 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 or a ==350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- EXECUTION TIME:
0.174774
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:
84.2
-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:
516.2
561.8
-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:
6004.4
6507.35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:47:52) 
-- CODE:
a = float(input("consumo: "))
if a >= 0 or a == 150:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a > 150 or a == 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 or a ==350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- OUTPUT:
84.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:48:02) 
-- CODE:
a = float(input("consumo: "))
if a >= 0 or a == 150:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a > 150 or a == 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 or a ==350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- OUTPUT:
84.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:48:58) 
-- CODE:
a = float(input("consumo: "))
if a >= 0:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a > 150 or a == 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 or a ==350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- OUTPUT:
84.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:50:30) 
-- CODE:
a = float(input("consumo: "))
if a >= 0:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a == 150 or a <= 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 or a <=350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- OUTPUT:
84.2
93.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:50:36) 
-- CODE:
a = float(input("consumo: "))
if a >= 0:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a == 150 or a <= 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 or a <=350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- EXECUTION TIME:
0.209868
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:
84.2
93.8
-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:
516.2
608.4
-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:
6004.4
7011.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:50:36) 
-- CODE:
a = float(input("consumo: "))
if a >= 0:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a == 150 or a <= 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 or a <=350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- EXECUTION TIME:
0.099591
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:
84.2
93.8
-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:
516.2
608.4
-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:
6004.4
7011.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:51:08) 
-- CODE:
a = float(input("consumo: "))
if a >= 0:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a == 150 or a <= 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 or a <=350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
	else:
		print()
else:
	print()
		
-- OUTPUT:
84.2
93.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:51:09) 
-- CODE:
a = float(input("consumo: "))
if a >= 0:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a == 150 or a <= 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 or a <=350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
	else:
		print()
else:
	print()
		
-- EXECUTION TIME:
0.128811
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:
84.2
93.8
-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:
516.2
608.4
-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:
6004.4
7011.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:51:10) 
-- CODE:
a = float(input("consumo: "))
if a >= 0:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a == 150 or a <= 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 or a <=350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
	else:
		print()
else:
	print()
		
-- OUTPUT:
84.2
93.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:51:10) 
-- CODE:
a = float(input("consumo: "))
if a >= 0:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a == 150 or a <= 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 or a <=350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
	else:
		print()
else:
	print()
		
-- EXECUTION TIME:
0.173163
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:
84.2
93.8
-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:
516.2
608.4
-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:
consumo: 6004.4
7011.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:52:26) 
-- CODE:
a = float(input("consumo: "))
if a >= 0:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a == 150 or a <= 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 or a <=350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- OUTPUT:
84.2
93.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:53:44) 
-- CODE:
a = float(input("consumo: "))
if a >= 0:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a >=150 or a <= 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a >= 250 or a <=350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- OUTPUT:
84.2
93.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:54:19) 
-- CODE:
a = float(input("consumo: "))
if a >= 0:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a >=150 or a == 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 or a ==350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- OUTPUT:
84.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:54:25) 
-- CODE:
a = float(input("consumo: "))
if a >= 0:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a >=150 or a == 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 or a ==350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- EXECUTION TIME:
0.155061
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:
84.2
-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:
516.2
561.8
-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:
6004.4
6507.35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:54:25) 
-- CODE:
a = float(input("consumo: "))
if a >= 0:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a >=150 or a == 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 or a ==350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- EXECUTION TIME:
0.120346
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:
84.2
-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:
516.2
561.8
-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:
6004.4
6507.35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:54:39) 
-- CODE:
a = float(input("consumo: "))
if a >= 0:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a >=150 or a == 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 or a ==350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- OUTPUT:
84.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:54:59) 
-- CODE:
a = float(input("consumo: "))
if a >= 0:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a >=150 or a == 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 or a ==350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- EXECUTION TIME:
0.141477
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:
84.2
-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:
516.2
561.8
-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:
6004.4
6507.35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:54:59) 
-- CODE:
a = float(input("consumo: "))
if a >= 0:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a >=150 or a == 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 or a ==350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- EXECUTION TIME:
0.125585
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:
84.2
-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:
84.2
-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:
6004.4
6507.35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:55:00) 
-- CODE:
a = float(input("consumo: "))
if a >= 0:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a >=150 or a == 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 or a ==350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- EXECUTION TIME:
0.182035
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:
6004.4
6507.35
-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:

-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:
6004.4
6507.35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:55:00) 
-- CODE:
a = float(input("consumo: "))
if a >= 0:
	valor = a*0.60+5.00
	print(round(valor,2))
	if a >=150 or a == 250:
		valor = a*0.65+8.00
		print(round(valor,2))
	elif a > 250 or a ==350:
		valor = a*0.70+12.00
		print(round(valor,2))
	elif a > 350:
		valor = a*0.75+16.00
		print(round(valor,2))
else:
	print()
		
-- EXECUTION TIME:
0.271433
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:
6004.4
6507.35
-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:
516.2
561.8
-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:
6004.4
6507.35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
